--- a/website/css/main.css
+++ b/website/css/main.css
@@ -6,10 +6,15 @@ Gray: #7B7780
 Light-gray: #A5A2AC
 White-smoke: #D3CFD9
 */
+html {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
 body {
     background-color: black;
-    min-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -88,7 +93,7 @@ h1,
 }
 
 .navbar {
-    transition: all 0.25s;
+    transition: all 0.5s;
 }
 
 .navbar-scrolled {
@@ -127,13 +132,15 @@ content {
     flex: 1;
 }
 
-.push {
-    height: 50px;
+#masterbody {
+    flex: 1 0 auto;
+    padding-top: 5rem;
 }
 
 .footer {
+    flex-shrink: 0;
+    margin-top: 1rem;
     background-color: #2D2A32;
-    min-height: 50px;
 }
 
 @media (max-width: 600px) {
