--- a/website/css/main.css
+++ b/website/css/main.css
@@ -19,10 +19,6 @@ body {
     flex-direction: column;
 }
 
-img {
-    aspect-ratio: 16/9;
-}
-
 h6,
 .h6,
 h5,
@@ -60,9 +56,8 @@ h1,
     height: auto;
     min-height: 35rem;
     padding: 15rem 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../img/car-bg.jpg");
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../img/car-bg.jpg") no-repeat;
     background-position: center;
-    background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
 }
@@ -93,7 +88,7 @@ h1,
 }
 
 .navbar {
-    transition: all 0.5s;
+    transition: all 0.25s;
 }
 
 .navbar-scrolled {
