--- a/website/view/css/main.css
+++ b/website/view/css/main.css
@@ -6,6 +6,16 @@ Gray: #7B7780
 Light-gray: #A5A2AC
 White-smoke: #D3CFD9
 */
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    list-style: none;
+    text-decoration: none;
+}
+
 html {
     height: 100%;
     display: flex;
@@ -13,7 +23,6 @@ html {
 }
 
 body {
-    background-color: black;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -56,7 +65,11 @@ h1,
     height: auto;
     min-height: 35rem;
     padding: 15rem 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url(/assets/img/car-bg.jpg) no-repeat;
+    background: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0.3) 0%,
+            rgba(0, 0, 0, 0.7) 75%,
+            #000 100%),
+        url(/assets/img/car-bg.jpg) no-repeat;
     background-position: center;
     background-attachment: scroll;
     background-size: cover;
@@ -64,7 +77,9 @@ h1,
 
 .masthead h1,
 .masthead .h1 {
-    font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+        "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 4.5rem;
     line-height: 4rem;
     letter-spacing: 0.8rem;
@@ -81,45 +96,37 @@ h1,
 }
 
 .text {
-    color: #D3CFD9;
-    text-shadow: 3px 3px 5px #2D2A32;
+    color: #DDBF5F;
+    text-shadow: 3px 3px 5px #2d2a32;
     font-size: 110%;
     font-weight: 600;
 }
 
 .navbar {
-    transition: all 0.25s;
+    transition: all 0.5s;
+    background: black;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(3.4px);
+    -webkit-backdrop-filter: blur(3.4px);
+}
+
+.nav-text {
+    color: #DDBF5F;
+    font-size: 110%;
+    font-weight: 600;
+}
+
+.nav-item:hover {
+    transform: scale(1.25);
 }
 
 .navbar-scrolled {
-    background-color: #2D2A32;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+    background-color: black;
 }
 
 .navbar-toggler,
 .dropdown-menu {
-    background-color: black;
     border: none;
-}
-
-.navbar-toggler:hover {
-    background-color: #2D2A32;
-}
-
-.dropdown-item:hover {
-    background-color: whitesmoke;
-}
-
-section {
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: row;
-}
-
-side {
-    padding: 5px;
-    max-width: 200px;
-    background-color: #f5f3f5;
 }
 
 content {
@@ -129,18 +136,80 @@ content {
 
 #masterbody {
     flex: 1 0 auto;
-    padding-top: 5rem;
+    padding-top: 4.5rem;
 }
 
 .footer {
     flex-shrink: 0;
-    margin-top: 1rem;
-    background-color: #2D2A32;
+    margin-top: 0;
+    background-color: #2d2a32;
 }
 
-@media (max-width: 600px) {
-    section {
-        -webkit-flex-direction: column;
-        flex-direction: column;
-    }
+/* Login page */
+
+section {
+    background: url(/assets/img/login-cover.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: scroll;
+    min-height: min(700px, 100%);
+}
+
+.login-form {
+    width: 350px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    padding: 20px;
+}
+
+.bg-glass {
+    background: rgba(255, 255, 255, 0.12);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(3.4px);
+    -webkit-backdrop-filter: blur(3.4px);
+}
+
+.login-form h1 {
+    font-size: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 40px 0;
+    color: whitesmoke;
+}
+
+form:invalid button {
+    opacity: 0.3;
+    pointer-events: none;
+}
+
+.login-label {
+    color: #31285a;
+    font-size: 100%;
+    font-weight: 600;
+    padding-left: 3px;
+}
+
+.forgot {
+    margin-top: -1rem;
+    position: relative;
+    text-align: end;
+    font-size: 80%;
+}
+
+#remember {
+    padding-top: 1px;
+}
+
+.checkbox-text {
+    color: white;
+    font-size: 90%;
+    font-weight: 500;
+}
+
+#message {
+    display: none;
+    padding-top: 5px;
 }
