--- a/website/view/css/main.css
+++ b/website/view/css/main.css
@@ -186,10 +186,10 @@ section {
     color: whitesmoke;
 }
 
-form:invalid button {
+/* form:invalid button {
     opacity: 0.3;
     pointer-events: none;
-}
+} */
 
 .login-label {
     color: #31285a;
