--- a/website/view/css/main.css
+++ b/website/view/css/main.css
@@ -275,3 +275,41 @@ hr {
     transform: translateY(0);
     opacity: 1;
 }
+
+/* Pagination */
+#pagination-link ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+#pagination-link ul li {
+    color: #fff;
+    display: flex;
+}
+
+#pagination-link ul li a {
+    background-color: black;
+    padding: 5px 20px;
+    border: 2px solid darkslategray;
+    border-right: 0;
+    color: whitesmoke;
+}
+
+#pagination-link ul li.active a {
+    background-color: goldenrod;
+}
+
+#pagination-link ul li.disabled a {
+    color: lightslategray;
+}
+
+#pagination-link ul li:first-child a {
+    border-radius: 5px 0 0 5px;
+}
+
+#pagination-link ul li:last-child a {
+    border-radius: 0 5px 5px 0;
+    border-right: 2px solid #3D315B;
+}
