--- a/website/view/css/main.css
+++ b/website/view/css/main.css
@@ -108,6 +108,13 @@ content {
     padding-top: 4.5rem;
 }
 
+#map {
+    height: 300px;
+    width: 500px;
+    margin: 0;
+    padding: 0;
+}
+
 .footer {
     flex-shrink: 0;
     margin-top: 0;
@@ -290,7 +297,7 @@ hr {
 }
 
 #pagination-link ul li a {
-    background-color: black;
+    background-color: #2d2a32;
     padding: 5px 20px;
     border: 2px solid darkslategray;
     border-right: 0;
